Possiblities section added
possiblities page added. carousel working correctly with proper
expanding thumbnails on 2nd page.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
 	
-	<body id="homepage" data-spy="scroll" data-target="#navbar-example">
+	<body id="homepage" data-spy="scroll" data-target=".navbar" data-offset="100">
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -28,7 +28,7 @@
 					<li><a href="#homepage">HOME</a></li>
 					<li><a href="#destinations">DESTINATIONS</a></li>
 					<li><a href="#possibilities">POSSIBILITIES</a></li>	
-				</ul>
+				</ul>	
 			</div>
 		</div>
 	</nav>	
@@ -44,15 +44,15 @@
 	  <!-- Wrapper for slides -->
 	  	<div class="carousel-inner" role="listbox">
 	    	<div class="item active">
-	      		<img src="css/spain.jpg" alt="Spain" class="img-responsive center-block">
+	      		<img src="css/spain.jpg" alt="Spain" class="img-responsive center-block" width="1500" height="900">
 	    	</div> 
 
 	    	<div class="item">
-	      		<img src="css/greece.jpg" alt="Greece" class="img-responsive">
+	      		<img src="css/greece.jpg" alt="Greece" class="img-responsive center-block" width="1500" height="900">
 	    	</div>
 
 	    	<div class="item">
-	      		<img src="css/africa.jpg" alt="Africa" class="img-responsive center-block">
+	      		<img src="css/africanew.jpg" alt="Africa" class="img-responsive center-block" width="1500" height="900">
 	  		</div>
 	  	</div>	
 
@@ -81,7 +81,7 @@
 			<div class="col-sm-8 col-lg-4 thumbnail">
 				<p class="text-center">Spain</p>
 				<a href= "#destination1" data-toggle="collapse">
-					<img src="css/spain.jpg">
+					<img src="css/spain.jpg" width="380" height="214">
 				</a>
 				<div id="destination1" class="collapse text-center">
 					<p><Lorem>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -95,7 +95,7 @@
 			<div class="col-sm-8 col-lg-4 thumbnail">
 				<p class="text-center">Greece</p>
 				<a href="#destination2" data-toggle="collapse">
-					<img src="css/greece.jpg">
+					<img src="css/greece.jpg" width="380" height="214">
 				</a>
 				<div id="destination2" class="collapse text-center">
 						<p><Lorem>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -108,8 +108,8 @@
 			</div>	
 			<div class="col-sm-8 col-lg-4 thumbnail">
 				<p class="text-center">Africa</p>
-				<a href="#destination3" data-toggle="collapse" class="smallafrica">
-					<img src="css/africa.jpg">
+				<a href="#destination3" data-toggle="collapse">
+					<img src="css/africanew.jpg" width="380" height="214">
 				</a>	
 				<div id="destination3" class="collapse text-center">
 						<p><Lorem>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -122,6 +122,25 @@
 			</div>
 		</div>	
 	</div>	
+	<div id="possibilities" class="container text-center">
+		<h2>Events/Attractions</h2><br>
+		<p>An <strong>endless</strong> number of possiblities. Do you really need more than one reason to travel?</p><br>
+		<p><Lorem> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</Lorem></p>
+		<br>
+		<div class="row">
+			<div>
+				
+			</div>
+			
+		</div>
 
+
+		
+	</div>
 	</body>
 </html>
