--- a/index.html
+++ b/index.html
@@ -133,14 +133,27 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</Lorem></p>
 		<br>
 		<div class="row">
-			<div>
-				
+		<div class="col-sm-8 col-lg-4 thumbnail">
+			<h1>Spain</h1>
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Pick Me!</button>
+			<div class="modal fade" id="myModal" role="dialog">
+    			<div class="modal-dialog">
+					<div class="modal-content">
+       					<div class="modal-header">
+          					<button type="button" class="close" data-dismiss="modal">&times;</button>
+          					<h4 class="modal-title">Festivals</h4>
+        				</div>
+        				<div class="modal-body">
+          					<p>La Tomatina</p><br>
+          					<p><strong>World's Largest Food Fight</strong></p>
+        				</div>
+        				<div class="modal-footer">
+          					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
+						</div>	
+					</div>
+				</div>
 			</div>
-			
-		</div>
-
-
-		
+		</div>			
 	</div>
 	</body>
 </html>
