Greece and Africa Modals
greece and africa modals created in thumbnails. content and pics needed
for all three

--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
 		<div class="row">
 		<div class="col-sm-8 col-lg-4 thumbnail">
 			<h1>Spain</h1>
-			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Pick Me!</button>
-			<div class="modal fade" id="myModal" role="dialog">
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal1">Pick Me!</button>
+			<div class="modal fade" id="myModal1" role="dialog">
     			<div class="modal-dialog">
 					<div class="modal-content">
        					<div class="modal-header">
           					<button type="button" class="close" data-dismiss="modal">&times;</button>
-          					<h4 class="modal-title">Festivals</h4>
+          					<h4 class="modal-title">Attractions</h4>
         				</div>
         				<div class="modal-body">
           					<p>La Tomatina</p><br>
@@ -153,6 +153,49 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="col-sm-8 col-lg-4 thumbnail">
+			<h1>Greece</h1>
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2">Pick Me!</button>
+			<div class="modal fade" id="myModal2" role="dialog">
+    			<div class="modal-dialog">
+					<div class="modal-content">
+       					<div class="modal-header">
+          					<button type="button" class="close" data-dismiss="modal">&times;</button>
+          					<h4 class="modal-title">Attractions</h4>
+        				</div>
+        				<div class="modal-body">
+          					<p>Mama Mia!</p><br>
+          					<p><strong>for the love of all things pizza!</strong></p>
+        				</div>
+        				<div class="modal-footer">
+          					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
+						</div>	
+					</div>
+				</div>
+			</div>
+		</div>			
+		<div class="col-sm-8 col-lg-4 thumbnail">
+			<h1>Africa</h1>
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal3">Pick Me!</button>
+			<div class="modal fade" id="myModal3" role="dialog">
+    			<div class="modal-dialog">
+					<div class="modal-content">
+       					<div class="modal-header">
+          					<button type="button" class="close" data-dismiss="modal">&times;</button>
+          					<h4 class="modal-title">Attractions</h4>
+        				</div>
+        				<div class="modal-body">
+          					<p>Lions, Tigers and Bears. Oh My!</p><br>
+          					<p><strong>All day Safari Outings</strong></p>
+        				</div>
+        				<div class="modal-footer">
+          					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
+						</div>	
+					</div>
+				</div>
+			</div>
+		</div>			
 		</div>			
 	</div>
 	</body>
