--- a/index.html
+++ b/index.html
@@ -198,5 +198,29 @@
 		</div>			
 		</div>			
 	</div>
+	<footer class="container">
+		<h3>Contact Me</h3>
+		<h4>Send me suggestions on additions to my bucket list!</h4>
+		<h4>Would love to hear from you!</h4><br>
+		<form class="form-horizontal">
+			<div class="form-group">
+				<label for="name" class="col-sm-2 control-label">Name</label>
+				<div class="col-sm-10">
+    				<input type="text" class="form-control" id="name" name="name" placeholder="Full Name..">
+  				</div>
+  			</div>		
+  			<div class="form-group">
+  				<label for="subject" class="col-sm-2 control-label">Subject</label>
+  				<div class="col-sm-10">
+    				<textarea id="subject" class="form-control" rows="3" name="subject" placeholder="Tell me where to head next..."></textarea>
+  				</div>
+  			</div>
+  			<div class="form-group">
+    			<div class="col-sm-offset-2 col-sm-10">
+      				<button type="submit" class="btn btn-default">Let it Fly</button>
+    			</div>	
+    		</div>	
+		</form>
+	</footer>
 	</body>
 </html>
