--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="js/main.js">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
 	
-	<body id="homepage" data-spy="scroll" data-target=".navbar" data-offset="100">
+	<body id="homepage" data-spy="scroll" data-target=".navbar" data-offset="50">
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -69,13 +70,13 @@
 
 	<div id="destinations" class="container text-center">
 		<h1>Fly With Me</h1>
-		<h2>A look into my travel bucket list</h2><br>
-		<p><Lorem> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</Lorem></p>
+		<h2>A sneak peek into my travel bucket list</h2><br>
+		<p>Hey you!... Yes you.. Stop right there!...</p>
+		<p>Whew, that was close. You were moving so fast, you almost missed it!</p>
+		<p>Wondering what could be so important? Here "It" is referring to the opportunity of experiencing new cultures and making priceless memories aka Traveling!
+		</p>
+		<p>The purpose of this site is to give you a sneak peak into the travel section of my bucket list which I hope to turn into a real-time blog that showcases stories and pictures in each</p> 
+		<p>location so that if feels like you're right there with me!</p>
 		<br>
 		<div class="row">
 			<div class="col-sm-8 col-lg-4 thumbnail">
@@ -84,12 +85,7 @@
 					<img src="css/spain.jpg" width="380" height="214">
 				</a>
 				<div id="destination1" class="collapse text-center">
-					<p><Lorem>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</Lorem></p><br>
+					<p></p><br>
 				</div>	
 			</div>	
 			<div class="col-sm-8 col-lg-4 thumbnail">
@@ -125,12 +121,9 @@
 	<div id="possibilities" class="container text-center">
 		<h2>Events/Attractions</h2><br>
 		<p>An <strong>endless</strong> number of possiblities. Do you really need more than one reason to travel?</p><br>
-		<p><Lorem> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</Lorem></p>
+		<p>Traveling is universal. People rarely need more than one reason to want to take a vacation. However, once you actually
+		reach your destination, finding time to do everthing becomes the challenge. This section is to provide a few attractions connected with 
+		each destination. Providing a good starting point or an excuse for an extended stay!</p>
 		<br>
 		<div class="row">
 		<div class="col-sm-8 col-lg-4 thumbnail">
@@ -144,8 +137,9 @@
           					<h4 class="modal-title">Attractions</h4>
         				</div>
         				<div class="modal-body">
-          					<p>La Tomatina</p><br>
+          					<p><strong>La Tomatina</strong></p><br>
           					<p><strong>World's Largest Food Fight</strong></p>
+          					<img src="">
         				</div>
         				<div class="modal-footer">
           					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
@@ -165,8 +159,8 @@
           					<h4 class="modal-title">Attractions</h4>
         				</div>
         				<div class="modal-body">
-          					<p>Mama Mia!</p><br>
-          					<p><strong>for the love of all things pizza!</strong></p>
+          					<p><strong>Archelogical Wonderland</strong></p><br>
+          					<p><strong>Acropolis: "Golden Age of Athens" & Olympia: "Home to the statue of Zeus"</strong></p>
         				</div>
         				<div class="modal-footer">
           					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
@@ -186,8 +180,8 @@
           					<h4 class="modal-title">Attractions</h4>
         				</div>
         				<div class="modal-body">
-          					<p>Lions, Tigers and Bears. Oh My!</p><br>
-          					<p><strong>All day Safari Outings</strong></p>
+          					<p><strong>Wildlife Galore</strong></p><br>
+          					<p><strong>Mount Kilamanjaro & Zanzibar</strong></p>
         				</div>
         				<div class="modal-footer">
           					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
@@ -198,25 +192,25 @@
 		</div>			
 		</div>			
 	</div>
-	<footer class="container">
+	<footer class="text-center">
 		<h3>Contact Me</h3>
 		<h4>Send me suggestions on additions to my bucket list!</h4>
 		<h4>Would love to hear from you!</h4><br>
 		<form class="form-horizontal">
 			<div class="form-group">
 				<label for="name" class="col-sm-2 control-label">Name</label>
-				<div class="col-sm-10">
+				<div class="col-sm-4">
     				<input type="text" class="form-control" id="name" name="name" placeholder="Full Name..">
   				</div>
   			</div>		
   			<div class="form-group">
   				<label for="subject" class="col-sm-2 control-label">Subject</label>
-  				<div class="col-sm-10">
+  				<div class="col-sm-8">
     				<textarea id="subject" class="form-control" rows="3" name="subject" placeholder="Tell me where to head next..."></textarea>
   				</div>
   			</div>
   			<div class="form-group">
-    			<div class="col-sm-offset-2 col-sm-10">
+    			<div class="col-sm-offset-2 col-sm-8">
       				<button type="submit" class="btn btn-default">Let it Fly</button>
     			</div>	
     		</div>	
