css stylings on footer, header, and body
added color thoughout. added pics to 3rd page thumbnails.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	
 	<body id="homepage" data-spy="scroll" data-target=".navbar" data-offset="50">
-	<nav class="navbar navbar-default navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top" id="navbar">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -75,8 +75,7 @@
 		<p>Whew, that was close. You were moving so fast, you almost missed it!</p>
 		<p>Wondering what could be so important? Here "It" is referring to the opportunity of experiencing new cultures and making priceless memories aka Traveling!
 		</p>
-		<p>The purpose of this site is to give you a sneak peak into the travel section of my bucket list which I hope to turn into a real-time blog that showcases stories and pictures in each</p> 
-		<p>location so that if feels like you're right there with me!</p>
+		<p>The purpose of this site is to give you a sneak peak into the travel section of my bucket list which I hope to turn into a real-time blog that showcases stories and pictures in each location so that if feels like you're right there with me!</p>
 		<br>
 		<div class="row">
 			<div class="col-sm-8 col-lg-4 thumbnail">
@@ -85,7 +84,12 @@
 					<img src="css/spain.jpg" width="380" height="214">
 				</a>
 				<div id="destination1" class="collapse text-center">
-					<p></p><br>
+					<p><Lorem> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</Lorem></p><br>
 				</div>	
 			</div>	
 			<div class="col-sm-8 col-lg-4 thumbnail">
@@ -94,12 +98,12 @@
 					<img src="css/greece.jpg" width="380" height="214">
 				</a>
 				<div id="destination2" class="collapse text-center">
-						<p><Lorem>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</Lorem></p>
+					<p><Lorem>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</Lorem></p>
 				</div>	
 			</div>	
 			<div class="col-sm-8 col-lg-4 thumbnail">
@@ -128,7 +132,7 @@
 		<div class="row">
 		<div class="col-sm-8 col-lg-4 thumbnail">
 			<h1>Spain</h1>
-			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal1">Pick Me!</button>
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal1" id="modal1">Pick Me!</button>
 			<div class="modal fade" id="myModal1" role="dialog">
     			<div class="modal-dialog">
 					<div class="modal-content">
@@ -139,7 +143,7 @@
         				<div class="modal-body">
           					<p><strong>La Tomatina</strong></p><br>
           					<p><strong>World's Largest Food Fight</strong></p>
-          					<img src="">
+          					<img src="css/tomatina.jpg" width="350px" height="350px">
         				</div>
         				<div class="modal-footer">
           					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
@@ -150,7 +154,7 @@
 		</div>
 		<div class="col-sm-8 col-lg-4 thumbnail">
 			<h1>Greece</h1>
-			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2">Pick Me!</button>
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal2" id="modal2">Pick Me!</button>
 			<div class="modal fade" id="myModal2" role="dialog">
     			<div class="modal-dialog">
 					<div class="modal-content">
@@ -161,6 +165,7 @@
         				<div class="modal-body">
           					<p><strong>Archelogical Wonderland</strong></p><br>
           					<p><strong>Acropolis: "Golden Age of Athens" & Olympia: "Home to the statue of Zeus"</strong></p>
+          					<img src="css/acropolis.jpeg" width="400px" height="300px">
         				</div>
         				<div class="modal-footer">
           					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
@@ -171,7 +176,7 @@
 		</div>			
 		<div class="col-sm-8 col-lg-4 thumbnail">
 			<h1>Africa</h1>
-			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal3">Pick Me!</button>
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal3" id="modal3">Pick Me!</button>
 			<div class="modal fade" id="myModal3" role="dialog">
     			<div class="modal-dialog">
 					<div class="modal-content">
@@ -182,6 +187,7 @@
         				<div class="modal-body">
           					<p><strong>Wildlife Galore</strong></p><br>
           					<p><strong>Mount Kilamanjaro & Zanzibar</strong></p>
+          					<img src="css/zanzibar.jpg" width="400px" height="300px">
         				</div>
         				<div class="modal-footer">
           					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
