--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	
 	<body id="homepage" data-spy="scroll" data-target=".navbar" data-offset="50">
-	<nav class="navbar navbar-default navbar-fixed-top" id="navbar">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -123,7 +123,7 @@
 		</div>	
 	</div>	
 	<div id="possibilities" class="container text-center">
-		<h2>Events/Attractions</h2><br>
+		<h2>Attractions</h2>
 		<p>An <strong>endless</strong> number of possiblities. Do you really need more than one reason to travel?</p><br>
 		<p>Traveling is universal. People rarely need more than one reason to want to take a vacation. However, once you actually
 		reach your destination, finding time to do everthing becomes the challenge. This section is to provide a few attractions connected with 
