navbar correction and page 3 thumbnail correction
fixed the navbar in reponsive and made images in 3rd page thumbnails
responsive

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#homepage">HOME</a></li>
-					<li><a href="#destinations">DESTINATIONS</a></li>
-					<li><a href="#possibilities">POSSIBILITIES</a></li>	
+					<li><a href="#homepage" data-toggle="collapse" data-target=".navbar-collapse.in">HOME</a></li>
+					<li><a href="#destinations" data-toggle="collapse" data-target=".navbar-collapse.in">DESTINATIONS</a></li>
+					<li><a href="#possibilities" data-toggle="collapse" data-target=".navbar-collapse.in">POSSIBILITIES</a></li>	
 				</ul>	
 			</div>
 		</div>
@@ -73,15 +73,15 @@
 		<h2>A sneak peek into my travel bucket list</h2><br>
 		<p>Hey you!... Yes you.. Stop right there!...</p>
 		<p>Whew, that was close. You were moving so fast, you almost missed it!</p>
-		<p>Wondering what could be so important? Here "It" is referring to the opportunity of experiencing new cultures and making priceless memories aka Traveling!
+		<p>Wondering what could be so important? Here "It" is referring to the opportunity of experiencing new cultures and making priceless memories aka <italic>Traveling</italic>!
 		</p>
-		<p>The purpose of this site is to give you a sneak peak into the travel section of my bucket list which I hope to turn into a real-time blog that showcases stories and pictures in each location so that if feels like you're right there with me!</p>
+		<p>The purpose of this site is to give you a sneak peak into my travel filled bucket list. I hope to turn this into a real-time blog that showcases stories and pictures while actually in each location, so that it feels like you're right there with me!</p>
 		<br>
 		<div class="row">
 			<div class="col-sm-8 col-lg-4 thumbnail">
 				<p class="text-center">Spain</p>
 				<a href= "#destination1" data-toggle="collapse">
-					<img src="css/spain.jpg" width="380" height="214">
+					<img src="css/spain.jpg" class="img-responsive center-block" width="380" height="214">
 				</a>
 				<div id="destination1" class="collapse text-center">
 					<p><Lorem> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -95,7 +95,7 @@
 			<div class="col-sm-8 col-lg-4 thumbnail">
 				<p class="text-center">Greece</p>
 				<a href="#destination2" data-toggle="collapse">
-					<img src="css/greece.jpg" width="380" height="214">
+					<img src="css/greece.jpg" class="img-responsive center-block" width="380" height="214">
 				</a>
 				<div id="destination2" class="collapse text-center">
 					<p><Lorem>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -109,7 +109,7 @@
 			<div class="col-sm-8 col-lg-4 thumbnail">
 				<p class="text-center">Africa</p>
 				<a href="#destination3" data-toggle="collapse">
-					<img src="css/africanew.jpg" width="380" height="214">
+					<img src="css/africanew.jpg" class="img-responsive center-block" width="380" height="214">
 				</a>	
 				<div id="destination3" class="collapse text-center">
 						<p><Lorem>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -143,7 +143,7 @@
         				<div class="modal-body">
           					<p><strong>La Tomatina</strong></p><br>
           					<p><strong>World's Largest Food Fight</strong></p>
-          					<img src="css/tomatina.jpg" width="350px" height="350px">
+          					<img src="css/tomatina.jpg" class="img-responsive center-block" width="350px" height="350px">
         				</div>
         				<div class="modal-footer">
           					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
@@ -165,7 +165,7 @@
         				<div class="modal-body">
           					<p><strong>Archelogical Wonderland</strong></p><br>
           					<p><strong>Acropolis: "Golden Age of Athens" & Olympia: "Home to the statue of Zeus"</strong></p>
-          					<img src="css/acropolis.jpeg" width="400px" height="300px">
+          					<img src="css/acropolis.jpeg" class="img-responsive center-block" width="400px" height="300px">
         				</div>
         				<div class="modal-footer">
           					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
@@ -187,7 +187,7 @@
         				<div class="modal-body">
           					<p><strong>Wildlife Galore</strong></p><br>
           					<p><strong>Mount Kilamanjaro & Zanzibar</strong></p>
-          					<img src="css/zanzibar.jpg" width="400px" height="300px">
+          					<img src="css/zanzibar.jpg" class="img-responsive center-block" width="400px" height="300px">
         				</div>
         				<div class="modal-footer">
           					<button type="button" class="btn btn-default" data-dismiss="modal">Maybe Next Time</button>
