deleted old pictures

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 		<h2>A sneak peek into my travel bucket list</h2><br>
 		<p>Hey you!... Yes you.. Stop right there!...</p>
 		<p>Whew, that was close. You were moving so fast, you almost missed it!</p>
-		<p>Wondering what could be so important? Here "It" is referring to the opportunity of experiencing new cultures and making priceless memories aka <italic>Traveling</italic>!
-		</p>
+		<p>Wondering what could be so important? Here "It" is referring to the opportunity of experiencing new cultures and making priceless memories aka <strong>Traveling</strong></p>
 		<p>The purpose of this site is to give you a sneak peak into my travel filled bucket list. I hope to turn this into a real-time blog that showcases stories and pictures while actually in each location, so that it feels like you're right there with me!</p>
 		<br>
 		<div class="row">
@@ -89,7 +88,7 @@
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</Lorem></p><br>
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</Lorem></p>
 				</div>	
 			</div>	
 			<div class="col-sm-8 col-lg-4 thumbnail">
